
=== pygtksourceview 2.2.0 ===

2008-03-10  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* NEWS:

	pygtksourceview 2.2.0 released

=== pygtksourceview 2.1.1 ===

2008-02-03  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* NEWS: updated

	pygtksourceview 2.1.1 released

2008-02-03  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/reference/gtksourceview2-gtksourcebuffer.xml: small fix.

2008-02-03  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtksourceview2.defs: define NULL as default for catogory params.
	
	* docs/reference/gtksourceview2-gtksourcebuffer.xml: fix the docs.

2008-02-01  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview2.override: fix various issues with some of the marks
	functions

	* test/test-widget.py: make marks work in the test widget

2008-02-01  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview2.defs:

	Adapt to Mark API changes

2008-01-21  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* configure.ac: post release version bump

=== pygtksourceview 2.1.0 ===

2008-01-21  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* NEWS: updated

	pygtksourceview 2.1.0 released

2008-01-21  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtksourceview2.override: manual wrappers for iter_backward_search and
	iter_forward_search.

	* docs/reference/gtksourceview2-gtksourcebuffer.xml: document the above
	functions

2008-01-21  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/reference/gtksourceview2-gtksourceprintcompositor.xml:
	fix a couple of links.

2008-01-20  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/reference/gtksourceview2-gtksourceprintcompositor.xml:
	add print_compositor_new_from_view function.
	
	* docs/reference/gtksourceview2-gtksourceview.xml: add virtuals.

2008-01-20  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/reference/gtksourceview2-gtksourceprintcompositor.xml: add.
	
	* docs/reference/gtksourceview2-ref.xml:
	* docs/Makefile.am: add gtksourceprintcompositor docs.
	